fix color contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -364,7 +364,7 @@ main > p{
 }
 
 .highlight {
-    background-color: var(--accent2-color);
+    background-color: var(--accent1-color);
     padding: 5px; 
     border-top-right-radius: 1.5rem;
     border-bottom-left-radius: 1.5rem;
